# kedro-poetry

./: README.md  pyproject.toml
sample-project/: README.md  pyproject.toml
sample-project/docs/source/: conf.py
sample-project/src/: setup.py
sample-project/src/sample_project/: __init__.py  __main__.py  pipeline_registry.py  settings.py
sample-project/src/tests/: test_run.py
tests/: test_kedropoetry.py
